# listerforall

./: CMakeLists.txt  Capabilities.java  CapabilitiesJL.java  FailureToFix.txt  FailureToFixt.txt  FilePasswordCallback.java  Lister.java  ListerForAll.java  ListerForJSS.java  Makefile  README.md  SetupDBs.java  adjustments4opensuse.txt  build.sh  debian9Makefile  fedoraMakefile  forOpensuse.sh  help.txt  help4run.txt  help4runs.txt  howToList.txt  initValues  opensuseMakefile  passwordFile  runit.sh  runits.sh  systemjssBuild.sh  systemjssMakefile  ubuntuMakefile  useownnssdbBuild.sh  useownnssdbMakefile  workarounds4openSUSE.txt
cmake/: JSSTests.cmake  capabilitiesCommon.cmake  capabilitiesConfig.cmake  capabiltiesCommon.cmake  capabiltiesConfig.cmake
nssdb/: cert9.db  dss.pfx  ecdsa.pfx  key4.db  pkcs11.txt  rsa.pfx
